infra/k8s/comments-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-nodeport-serv
spec:
  type: NodePort
  selector:
    app: comments
  ports:
  - port: 4001
    targetPort: 4001
    name: comments
    protocol: TCP
