infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: ajgagal/blog-posts:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: posts-serv
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: posts
