infra/k8s/posts-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-serv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: posts
